--- a/plugins/monitor/nagios/config/commands.cfg.template
+++ b/plugins/monitor/nagios/config/commands.cfg.template
@@ -799,6 +799,14 @@ define command{
 	command_line		@PHP_BIN@ @APP_DIR@/plugins/monitor/nagios/exec.php --warning-threshold 55 --script "@APP_DIR@/tests/monitoring/api_v3/play.php --service-url $HOSTADDRESS$ --entry-reference-id MEDIA_WEB_QUALITY --protocol @ENVIRONMENT_PROTOCOL@ --format http"
 }
 
+
+
+# the following commands use the standard nagios plugins available from the EPEL repo:
+# nagios-plugins-log-1.4.16-10.el6.x86_64
+# nagios-plugins-ntp-1.4.16-10.el6.x86_64
+# nagios-plugins-mysql-1.4.16-10.el6.x86_64
+
+
 define command{
         command_name check_api_v3_log
         command_line $USER1$/check_log -F /opt/kaltura/log/kaltura_api_v3.log -O /opt/kaltura/tmp/kaltura_api_v3.log -q "ERR:|PHP|trace|CRIT|\[error\]"
@@ -808,3 +816,22 @@ define command{
         command_name check_kaltura_apache_log
         command_line $USER1$/check_log -F /opt/kaltura/log/kaltura_apache_errors.log -O /opt/kaltura/tmp/kaltura_apache_errors.log -q "PHP|\[error\]"
 }
+
+
+# $USER6$ should be defined in resources.cfg and contain the 'kaltura' DB name, $USER7$ holds the kaltura DB user which is 'kaltura' by default and $USER8$ should hold the passwd
+define command{
+        command_name check_kaltura_mysql
+        command_line  $USER1$/check_mysql -H $HOSTADDRESS$ -d $USER6$ -u$USER7$ -p$USER8$ -w10 -c20
+}
+
+# $USER9$ should be defined in resources.cfg and contain the 'kalturadw' DB name, $USER10$ holds the kaltura DB user which is 'etl' by default and $USER8$ should hold the passwd
+define command{
+        command_name check_kaltura_dwh_mysql
+        command_line  $USER1$/check_mysql -H $HOSTADDRESS$ -d $USER6$ -u$USER7$ -p$USER8$ -w10 -c20
+}
+
+define command{
+        command_name check_ntp_time
+        $USER1$/check_ntp_time -H $HOSTADDRESS$ -w 2 -c 5
+}
+
