Added a column named user_names to Kaltura_entry, and added it to the free text search #plat-1973 #time 1h

--- a/configurations/sphinx/kaltura.conf.template
+++ b/configurations/sphinx/kaltura.conf.template
@@ -204,6 +204,7 @@ index kaltura_entry:kaltura_base
 	rt_field = creator_kuser_id
 	rt_field = creator_puser_id
 	rt_attr_json = dynamic_attributes
+	rt_field = user_names
 	rt_field = plugins_data
 }
 
