added data for related playlist _KDP_CTXPL which is required for the related player plugin to work

--- a/deployment/base/scripts/init_data/04.entry.ini
+++ b/deployment/base/scripts/init_data/04.entry.ini
@@ -144,3 +144,13 @@ id=_KMCSPL2
 data=100000.txt
 name=PlaylistDemo2
 
+[_KDP_CTXPL]
+partnerId=0
+status=2
+type=5
+mediaType=10
+moderationStatus=6
+displayInSearch=2
+
+id=_KDP_CTXPL
+dataContent=@playlist/_KDP_CTXPL.xml
