--- a/deployment/permissions/service.deliveryprofile.ini
+++ b/deployment/permissions/service.deliveryprofile.ini
@@ -24,7 +24,7 @@ permissionItem3.param3 =
 permissionItem3.param4 = 
 permissionItem3.param5 = 
 permissionItem3.tags = 
-permissionItem3.permissions = -2>PARTNER_-2_GROUP_*_PERMISSION, -2>SYSTEM_ADMIN_DELIVERY, -2>SYSTEM_READ_DELIVERY
+permissionItem3.permissions = -2>PARTNER_-2_GROUP_*_PERMISSION, -2>SYSTEM_ADMIN_DELIVERY, -2>SYSTEM_BASE_DELIVERY
 
 permissionItem4.service = deliveryprofile
 permissionItem4.action = get
@@ -33,7 +33,7 @@ permissionItem4.param3 =
 permissionItem4.param4 = 
 permissionItem4.param5 = 
 permissionItem4.tags = 
-permissionItem4.permissions = -2>PARTNER_-2_GROUP_*_PERMISSION, -2>SYSTEM_ADMIN_DELIVERY, , -2>SYSTEM_READ_DELIVERY
+permissionItem4.permissions = -2>PARTNER_-2_GROUP_*_PERMISSION, -2>SYSTEM_ADMIN_DELIVERY, -2>SYSTEM_BASE_DELIVERY
 
 permissionItem5.service = deliveryprofile
 permissionItem5.action = clone
