scheduled tasks - support maxTotalCountAllowed, added SUSPENDED and DRY_RUN_ONLY statuses

--- a/configurations/batch/batch.ini.template
+++ b/configurations/batch/batch.ini.template
@@ -679,6 +679,7 @@ type												= KScheduledTaskRunner
 maximumExecutionTime								= 600
 scriptPath											= ../plugins/scheduled_task/batch/ScheduledTaskRunner/KScheduledTaskRunnerExe.php
 sleepBetweenStopStart								= 21600
+maxTotalCountAllowed								= 50
 
 [KAsyncSyncCategoryPrivacyContext : JobHandlerWorker]
 id													= 550
