Added permission definition

--- a/deployment/permissions/partner.-2.ini
+++ b/deployment/permissions/partner.-2.ini
@@ -498,3 +498,12 @@ permission189.description = "Delivery profile UI permission"
 permission189.dependsOnPermissionNames = 
 permission189.tags = 
 permission189.partnerGroup = 
+
+permission190.partnerId = -2
+permission190.type = 1
+permission190.name = SYSTEM_BASE_DELIVERY
+permission190.friendlyName = "Base Delivery"
+permission190.description = "Delivery profile Base UI permission"
+permission190.dependsOnPermissionNames = 
+permission190.tags = 
+permission190.partnerGroup = 
