Live Analytics Export - commit to move to another environment

--- a/batch/batches/Mailer/emails_en.ini
+++ b/batch/batches/Mailer/emails_en.ini
@@ -54,6 +54,8 @@
  KALTURA_NEW_EXISTING_USER_ADMIN_CONSOLE_EMAIL = 124;
  KALTURA_NEW_USER_ADMIN_CONSOLE_EMAIL_TO_ADMINS = 125;
  
+ KALTURA_LIVE_REPORT_EXPORT_IS_READY = 130;
+ 
  KMC_SUPPORT_FORM = 210
 
 [subjects]
@@ -117,6 +119,8 @@
 123 = A new Admin Console user account has been created for you
 124 = A new Admin Console user account has been created for you
 125 = Admin Console user created
+
+130 = "Live Report Export is ready" 
 
 210 = "%s"
 
