--- a/deployment/permissions/service.livereports.ini
+++ b/deployment/permissions/service.livereports.ini
@@ -16,3 +16,12 @@ permissionItem2.param4 =
 permissionItem2.param5 = 
 permissionItem2.tags = 
 permissionItem2.permissions = BASE_USER_SESSION_PERMISSION
+
+permissionItem3.service = livereports
+permissionItem3.action = exportToCsv
+permissionItem3.partnerId = 0
+permissionItem3.param3 = 
+permissionItem3.param4 = 
+permissionItem3.param5 = 
+permissionItem3.tags = 
+permissionItem3.permissions = BASE_USER_SESSION_PERMISSION
