Another draft. Mail suuport.

--- a/configurations/local.template.ini
+++ b/configurations/local.template.ini
@@ -72,6 +72,8 @@ batch_alert_email = alert@@KALTURA_VIRTUAL_HOST_NAME@
 batch_alert_name = @ENVIRONMENT_NAME@
 bulk_notification_sender_email = notifications@@KALTURA_VIRTUAL_HOST_NAME@  
 bulk_notification_sender_name = @ENVIRONMENT_NAME@ 	
+live_report_sender_email = live_report@@KALTURA_VIRTUAL_HOST_NAME@
+live_report_sender_name = @ENVIRONMENT_NAME@
 
 ksr_id = ""
 ksr_site = ""
