--- a/batch/batches/Mailer/emails_en.ini
+++ b/batch/batches/Mailer/emails_en.ini
@@ -120,7 +120,9 @@
 124 = A new Admin Console user account has been created for you
 125 = Admin Console user created
 
-130 = "Live Report Export is ready" 
+130 = "Your Export from %s is ready for download" 
+131 = "Your Export from %s has failed"
+132 = "Your Export from MM-DD-YY HH:MM has aborted"
 
 210 = "%s"
 
@@ -190,6 +192,10 @@
 123 = "Hello %s,<BR><BR>A new Kaltura Admin Console user account on Kaltura's online video platform has been created for you by %s.<BR><BR>Your Kaltura Admin Console Login Information:<BR><BR>Login email: %s.<BR>To set your user password go to:<BR><BR>%s<BR><BR>Please note that these credentials (login email and password) will be used when you open a KMC user account<BR>with the same login email address that you are using for the Admin Console.<BR><BR>Your role in the admin console account is : %s.<BR><BR>Once you have set your password you can log into Kaltura's Admin Console at %s and get started!<BR><BR>Kaltura Customer Service<BR>"
 124 = "Hello %s,<BR><BR>A new Kaltura Admin Console user account on Kaltura's online video platform has been created for you by %s.<BR><BR>Your Kaltura Admin Console Login Information:<BR><BR>Login email: %s.<BR><BR>Our records show that you already have a KMC user account for Kaltura's online video platform.<BR>You should use your KMC credentials (login email and password) to log into the Admin Console as well.<BR>Please note that any change that you make to your Admin Console or your KMC account credentials will apply to all of your user accounts.<BR><BR>Your role in the Admin Console account is : %s.<BR><BR>Kaltura Customer Service<BR>"
 125 = "Hello %s,<BR><BR>A new Admin Console user account on Kaltura's online video platform has been created by %s<BR><BR>The new user information:<BR><BR>Login email: %s.<BR>Admin Console user role: %s.<BR><BR>Thank you for choosing Kaltura,<BR><BR>Kaltura Customer Service<BR>"
+
+130 = "Hello %s,<BR><BR>Your export process from %s with ID %s is ready for download. <br> You can download the file here: %s<BR><BR> Kaltura Customer Service"
+131 = "Hello %s,<BR><BR>Your Export process from %s process with ID %s has failed with error type %s, error number %s, message %s.<BR><BR>Kaltura Customer Service"
+132 = "Hello %s,<BR><BR>Your Export process from %s with ID %s has been aborted. <BR><BR>Kaltura Customer Service"
 
 210 = "Following is a support request from KMC: <BR><BR>%s"
 
