--- a/batch/batches/Mailer/emails_en.ini
+++ b/batch/batches/Mailer/emails_en.ini
@@ -55,6 +55,9 @@
  KALTURA_NEW_USER_ADMIN_CONSOLE_EMAIL_TO_ADMINS = 125;
  
  KALTURA_LIVE_REPORT_EXPORT_IS_READY = 130;
+ KALTURA_LIVE_REPORT_EXPORT_FAILED = 131;
+ KALTURA_LIVE_REPORT_EXPORT_ABORTED = 132;
+ 
  
  KMC_SUPPORT_FORM = 210
 
@@ -122,7 +125,7 @@
 
 130 = "Your Export from %s is ready for download" 
 131 = "Your Export from %s has failed"
-132 = "Your Export from MM-DD-YY HH:MM has aborted"
+132 = "Your Export from %s has aborted"
 
 210 = "%s"
 
