fixed export object task engine

--- a/plugins/scheduled_task/config/permissions.ini
+++ b/plugins/scheduled_task/config/permissions.ini
@@ -56,4 +56,9 @@ scheduledTaskGetDryRunResults.action = getDryRunResults
 scheduledTaskGetDryRunResults.partnerId = 0
 scheduledTaskGetDryRunResults.permissions = scheduledTask.SCHEDULED_TASK_BASE, -2>scheduledTask.SYSTEM_ADMIN_MANAGE, -2>PARTNER_-2_GROUP_*_PERMISSION
 
+baseEntryExport.service = baseEntry
+baseEntryExport.action = export
+baseEntryExport.partnerId = 0
+baseEntryExport.permissions = -1>PARTNER_-1_GROUP_*_PERMISSION
+
 [parameter_permission_items]
