Some code updates.

--- a/batch/batches/Mailer/emails_en.ini
+++ b/batch/batches/Mailer/emails_en.ini
@@ -197,7 +197,7 @@
 125 = "Hello %s,<BR><BR>A new Admin Console user account on Kaltura's online video platform has been created by %s<BR><BR>The new user information:<BR><BR>Login email: %s.<BR>Admin Console user role: %s.<BR><BR>Thank you for choosing Kaltura,<BR><BR>Kaltura Customer Service<BR>"
 
 130 = "Hello %s,<BR><BR>Your export process from %s with ID %s is ready for download. <br> You can download the file here: %s<BR><BR> Kaltura Customer Service"
-131 = "Hello %s,<BR><BR>Your Export process from %s process with ID %s has failed with error type %s, error number %s, message %s.<BR><BR>Kaltura Customer Service"
+131 = "Hello %s,<BR><BR>Your Export process from %s process with ID %s has failed with error type %s, error number %s<BR><BR>Kaltura Customer Service"
 132 = "Hello %s,<BR><BR>Your Export process from %s with ID %s has been aborted. <BR><BR>Kaltura Customer Service"
 
 210 = "Following is a support request from KMC: <BR><BR>%s"
