--- a/configurations/sphinx/kaltura.conf.template
+++ b/configurations/sphinx/kaltura.conf.template
@@ -205,6 +205,7 @@ index kaltura_entry:kaltura_base
 	rt_field = creator_puser_id
 	rt_attr_json = dynamic_attributes
 	rt_field = user_names
+	rt_attr_uint = source
 	rt_field = plugins_data
 }
 
