Changed the defulat secured delivery type from hds to http.

--- a/configurations/base.ini
+++ b/configurations/base.ini
@@ -203,7 +203,7 @@ max_live_recording_duration_hours = 24
 ; max duration in seconds
 short_entries_max_duration = 300
 short_entries_default_delivery_type = http
-secured_default_delivery_type = hds
+secured_default_delivery_type = http
 default_delivery_type = http
 
 template_partner_custom_data_exclude_fields[] = defConversionProfileType
