--- a/configurations/apache/conf.d/apps.conf.template
+++ b/configurations/apache/conf.d/apps.conf.template
@@ -21,7 +21,7 @@ Alias /html5 "@WEB_DIR@/html5"
 <Directory "@WEB_DIR@/html5">
     ExpiresActive On
     DirectoryIndex index.php
-    Options ExecCGI -Indexes FollowSymLinks Includes
+    Options -Indexes +FollowSymLinks +Includes
     AllowOverride None
     Order allow,deny
     Allow from all
@@ -30,7 +30,7 @@ Alias /html5 "@WEB_DIR@/html5"
 Alias /apps "@BASE_DIR@/apps"
 <Directory "@BASE_DIR@/apps">
     DirectoryIndex index.php
-    Options ExecCGI -Indexes FollowSymLinks Includes
+    Options -Indexes +FollowSymLinks +Includes
     AllowOverride None
     Order allow,deny
     Allow from all
