fixes error: skipping log because parent directory has insecure permissions (It's world writable or writable by group which is not "root") Set "su" directive in config file to tell logrotate which user/group should be used for rotation.
This issue was found in RHEL7 with a newer ver of logrotate
[logrotate-3.8.6]. The directive is ignored in older versions of
logrotate so that does not cause an issue.

--- a/configurations/logrotate/kaltura_apache.template
+++ b/configurations/logrotate/kaltura_apache.template
@@ -9,6 +9,7 @@
  postrotate
  service @APACHE_SERVICE@ reload
  endscript
+ su root kaltura
 }
 
 @LOG_DIR@/kaltura_apache_access.log {
@@ -22,6 +23,7 @@
  mv @LOG_DIR@/kaltura_apache_access.log-`/bin/date +%Y%m%d`.gz @EVENTS_LOGS_DIR@/`hostname`-kaltura_apache_access.log-`/bin/date +%Y%m%d-%H`.gz
  service @APACHE_SERVICE@ reload
  endscript
+ su root kaltura
 }
 
 @LOG_DIR@/kaltura_apache_errors_ssl.log {
@@ -35,6 +37,7 @@
  postrotate
  service @APACHE_SERVICE@ reload
  endscript
+ su root kaltura
 }
 
 @LOG_DIR@/kaltura_apache_access_ssl.log {
@@ -48,4 +51,5 @@
  mv @LOG_DIR@/kaltura_apache_access_ssl.log-`/bin/date +%Y%m%d`.gz @EVENTS_LOGS_DIR@/`hostname`-kaltura_apache_access_ssl.log-`/bin/date +%Y%m%d-%H`.gz
  service @APACHE_SERVICE@ reload
  endscript
+ su root kaltura
 }
