--- a/configurations/logrotate/kaltura_apps.template
+++ b/configurations/logrotate/kaltura_apps.template
@@ -5,6 +5,7 @@
  compress
  dateext
  notifempty
+ su root kaltura
 }
 
 @LOG_DIR@/kaltura_multi_publishers.log {
@@ -14,6 +15,7 @@
  compress
  dateext
  notifempty
+ su root kaltura
 }
 
 @LOG_DIR@/kaltura_hosted_pages.log {
@@ -23,4 +25,5 @@
  compress
  dateext
  notifempty
+ su root kaltura
 }
