--- a/configurations/monit/monit.d/mariadb.template.rc
+++ b/configurations/monit/monit.d/mariadb.template.rc
@@ -1,7 +1,7 @@
-        check process mysql
-           with pidfile "/var/run/mysqld/mysqld.pid"
-           start program = "/sbin/service mysqld start" with timeout 60 seconds
-           stop program = "/sbin/service mysqld stop"
+        check process mariadb
+           with pidfile "/var/run/mariadb/mariadb.pid"
+           start program = "/sbin/service mariadb start" with timeout 60 seconds
+           stop program = "/sbin/service mariadb stop"
            #if 10 restarts within 10 cycles then timeout
            group kaltura
            depends on my.cnf, mysqld
@@ -10,7 +10,7 @@
             with path "/etc/my.cnf"
             # Reload mysql if the my.cnf file was changed
             if changed checksum
-               then exec "service mysqld reload"
+               then exec "service mariadb reload"
 
         check file mysqld
             with path "/usr/bin/mysqld_safe"
