re-added Require all granted.

--- a/configurations/apache/conf.d/enabled.kaltura.conf.template
+++ b/configurations/apache/conf.d/enabled.kaltura.conf.template
@@ -164,6 +164,7 @@ Alias /sf "/usr/share/pear/data/symfony/web/sf/"
     Options FollowSymLinks ExecCGI Includes
     AllowOverride None
     Allow from all
+    Require all granted
 </Directory>
 
 Alias /start "@APP_DIR@/start"
@@ -173,6 +174,7 @@ Alias /start "@APP_DIR@/start"
 	AllowOverride All
 	Order allow,deny
 	Allow from all
+	Require all granted
 </Directory>
 
 Alias /content/uiconf "@WEB_DIR@/content/uiconf"
@@ -186,6 +188,7 @@ Alias /content/uiconf "@WEB_DIR@/content/uiconf"
         Header unset ETag
         AllowOverride None
         Allow from all
+	Require all granted
 </Directory>
 
 Alias /content "@WEB_DIR@/content"
@@ -202,6 +205,7 @@ Alias /content "@WEB_DIR@/content"
 	RewriteRule ^(.*)entry/widget/(.*) /images/blank_one_pixel.gif [L]
         AllowOverride None
         Allow from all
+	Require all granted
 </Directory>
 
 Alias /flash "@WEB_DIR@/flash"
@@ -216,6 +220,7 @@ Alias /flash "@WEB_DIR@/flash"
 	FileETag None
         AllowOverride None
         Allow from all
+	Require all granted
 </Directory>
 
 # ------------------------------------------------------------------------------
