added some directives from server-saas-config.

--- a/batch/batches/Mailer/emails_en.template.ini
+++ b/batch/batches/Mailer/emails_en.template.ini
@@ -29,16 +29,21 @@
  KALTURAS_PARTNER_EMAIL_CHANGE = 52;
  KALTURAS_EXISTING_USER_REGISTRATION_CONFIRMATION = 55;
  KALTURAS_DEFAULT_EXISTING_USER_REGISTRATION_CONFIRMATION = 56;
+ KALTURAS_BLACKBOARD_DEFAULT_REGISTRATION_CONFIRMATION = 57;
   
  KALTURAS_FLATTEN_READY = 60;
  KALTURAS_DOWNLOAD_READY = 62;
  KALTURAS_BULKDOWNLOAD_READY = 63;
+ KALTURA_BULKUPLOAD_FINISHED = 64;
+ KALTURA_BULKUPLOAD_FAILED = 65;
+ KALTURA_BULKUPLOAD_ABORTED = 66;
  
  KALTURA_PACKAGE_UPGRADE = 80;
  KALTURA_PACKAGE_EIGHTY_PERCENT_WARNING = 81;
  KALTURA_PACKAGE_LIMIT_WARNING_1 = 82;
  KALTURA_PACKAGE_LIMIT_WARNING_2 = 83;
  KALTURA_DELETE_ACCOUNT = 84;
+ KALTURA_EXTENED_FREE_TRAIL_ENDS_WARNING = 87;
 
  KALTURA_BATCH_ALERT = 90;
  
