Added UIConf Webcasting additional mappings PLAT-2245 #time 1h

--- a/configurations/admin.template.ini
+++ b/configurations/admin.template.ini
@@ -41,6 +41,7 @@ settings.uiConfTypes[] = Kaltura_Client_Enum_UiConfObjType::PLAYER_SL
 settings.uiConfTypes[] = Kaltura_Client_Enum_UiConfObjType::PLAYLIST
 settings.uiConfTypes[] = Kaltura_Client_Enum_UiConfObjType::CLIPPER
 settings.uiConfTypes[] = Kaltura_Client_Enum_UiConfObjType::KSR
+settings.uiConfTypes[] = Kaltura_Client_Enum_UiConfObjType::WEBCASTING
 
 ; disable KCW visual editor for on-prem/ce (editor is enabled if property is true or missing)
 settings.enableKCWVisualEditor = false;
