--- a/configurations/apache/conf.d/enabled.kaltura.conf.template
+++ b/configurations/apache/conf.d/enabled.kaltura.conf.template
@@ -164,7 +164,9 @@ Alias /sf "/usr/share/pear/data/symfony/web/sf/"
     Options FollowSymLinks ExecCGI Includes
     AllowOverride None
     Allow from all
-    Require all granted
+    <IfVersion >= 2.4>
+	Require all granted
+    </IfVersion>
 </Directory>
 
 Alias /start "@APP_DIR@/start"
@@ -174,7 +176,9 @@ Alias /start "@APP_DIR@/start"
 	AllowOverride All
 	Order allow,deny
 	Allow from all
+    <IfVersion >= 2.4>
 	Require all granted
+    </IfVersion>
 </Directory>
 
 Alias /content/uiconf "@WEB_DIR@/content/uiconf"
@@ -188,7 +192,9 @@ Alias /content/uiconf "@WEB_DIR@/content/uiconf"
         Header unset ETag
         AllowOverride None
         Allow from all
-	Require all granted
+	<IfVersion >= 2.4>
+	    Require all granted
+	</IfVersion>
 </Directory>
 
 Alias /content "@WEB_DIR@/content"
@@ -205,7 +211,9 @@ Alias /content "@WEB_DIR@/content"
 	RewriteRule ^(.*)entry/widget/(.*) /images/blank_one_pixel.gif [L]
         AllowOverride None
         Allow from all
-	Require all granted
+	<IfVersion >= 2.4>
+	    Require all granted
+	</IfVersion>
 </Directory>
 
 Alias /flash "@WEB_DIR@/flash"
@@ -220,7 +228,9 @@ Alias /flash "@WEB_DIR@/flash"
 	FileETag None
         AllowOverride None
         Allow from all
-	Require all granted
+	<IfVersion >= 2.4>
+	    Require all granted
+	</IfVersion>
 </Directory>
 
 # ------------------------------------------------------------------------------
