forgot this one..

--- a/configurations/apache/conf.d/admin.conf.template
+++ b/configurations/apache/conf.d/admin.conf.template
@@ -6,5 +6,7 @@ Alias /admin_console "@APP_DIR@/admin_console/web"
 	AllowOverride All
 	Order allow,deny
 	Allow from all
-	Require all granted
+	<IfVersion >= 2.4>
+	    Require all granted
+	</IfVersion>
 </Directory>
