--- a/configurations/local.template.ini
+++ b/configurations/local.template.ini
@@ -129,6 +129,7 @@ metadata_sphinx_num_of_int_fields = 10
 ;the range is used when checking service actions permissions and allowing to access certain 
 ;services without KS from the internal servers
 ;internal_ip_range = @IP_RANGE@
+;Boolean flag signifying whether private IPs can be accepted as load-balancers in the environment 
 ;accept_private_ips = 1
 
 ; dwh settings
