--- a/configurations/base.ini
+++ b/configurations/base.ini
@@ -121,6 +121,7 @@ default_batch_version = 1
 
 event_consumers[] = kFlowManager
 event_consumers[] = kStorageExporter
+event_consumers[] = kObjectCreatedHandler
 event_consumers[] = kObjectCopyHandler
 event_consumers[] = kObjectDeleteHandler
 event_consumers[] = kPermissionManager
