New Unicorn connector

--- a/configurations/plugins.template.ini
+++ b/configurations/plugins.template.ini
@@ -25,6 +25,7 @@ ContentDistribution
 YoutubeApiDistribution
 ; DailymotionDistribution
 ; TVComDistribution
+; UnicornDistribution
 CuePoint
 CuePointSphinx
 CuePointMetadata
