Updated git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,33 @@
 admin_console/lib/Kaltura/Client
 admin_console/lib/tests
-cache/
+alpha/web/api_v3
+cache/*
 clients/
-batch/client
+batch/client/
 var_console/lib/Kaltura/Client
 configurations/apache/kaltura.conf
 configurations/apache/conf.d/enabled.kaltura.conf
+configurations/apache/conf.d/enabled.admin.conf
 configurations/sphinx/kaltura.conf
+configurations/sphinx/kaltura.ssl.conf
 configurations/admin.ini
 configurations/batch/
 configurations/batch.ini
+configurations/batch/config.ini
 configurations/db.ini
 configurations/dc_config.ini
 configurations/generator.ini
 configurations/html5.php
 configurations/local.ini
 configurations/logger.ini
+configurations/monit/batch.rc
+configurations/monit/httpd.rc
+configurations/monit/memcached.rc
+configurations/monit/mysqld.rc
+configurations/monit/sphinx.populate.rc
+configurations/monit/sphinx.rc
+configurations/monit/monit.rc
+configurations/php/kaltura.ini
 configurations/plugins.ini
 configurations/system.ini
 configurations/broadcast.ini
@@ -24,13 +36,16 @@ configurations/url_managers.ini
 configurations/google_auth.ini
 configurations/var.ini
 configurations/widevine.ini
-tests/lib/
-configurations/batch/config.ini
+configurations/optimized_playback.ini
+configurations/playReady.ini
+configurations/v3cache_getfeed_expiry.ini
+configurations/whitelabel.ini
+tests/lib/*
+tests/sanity/lib/config.ini
+tests/sanity/lib/logrotate.ini
 plugins/.buildpath
 plugins/.settings/*
 alpha/.settings/
 .idea
 .DS_Store
 admin_console/lib/Kaltura/Client/
-cache/
-batch/client/
