--- a/deployment/permissions/service.flavorasset.ini
+++ b/deployment/permissions/service.flavorasset.ini
@@ -96,7 +96,7 @@ permissionItem11.param3 =
 permissionItem11.param4 = 
 permissionItem11.param5 = 
 permissionItem11.tags = 
-permissionItem11.permissions = CONTENT_MANAGE_BASE, KMC_READ_ONLY, BASE_USER_SESSION_PERMISSION, WIDGET_SESSION_PERMISSION
+permissionItem11.permissions = CONTENT_MANAGE_BASE, KMC_READ_ONLY, BASE_USER_SESSION_PERMISSION, WIDGET_SESSION_PERMISSION, PLAYBACK_BASE_PERMISSION
 
 permissionItem12.service = flavorasset
 permissionItem12.action = list
