fixes 'AH01630 client-denied-by-server-configuration' for Apache 2.4.

--- a/configurations/apache/conf.d/apps.conf.template
+++ b/configurations/apache/conf.d/apps.conf.template
@@ -3,7 +3,10 @@ Alias /kmc "@APP_DIR@/kmc/web"
 <Directory "@APP_DIR@/kmc/web">
     DirectoryIndex index.php
     Options Indexes FollowSymLinks Includes
-    AllowOverride All
+    <IfVersion <= 2.2>
+        AllowOverride All
+    </IfVersion>
+
     Order allow,deny
     Allow from all
     <IfVersion >= 2.4>
