adding externalMedia->add to basic permissions SUP-2708 #time 1h

--- a/deployment/permissions/service.externalmedia.externalmedia.ini
+++ b/deployment/permissions/service.externalmedia.externalmedia.ini
@@ -6,7 +6,7 @@ permissionItem1.param3 =
 permissionItem1.param4 = 
 permissionItem1.param5 = 
 permissionItem1.tags = 
-permissionItem1.permissions = EXTERNAL_MEDIA_MANAGE, BASE_USER_SESSION_PERMISSION
+permissionItem1.permissions = EXTERNAL_MEDIA_MANAGE, BASE_USER_SESSION_PERMISSION, CONTENT_INGEST_UPLOAD
 
 permissionItem2.service = externalmedia_externalmedia
 permissionItem2.action = count
