Generate BPMN processes

--- a/configurations/generator.ini
+++ b/configurations/generator.ini
@@ -155,3 +155,6 @@ exclude = media.addfrombulk
 [nodePlayServer : node]
 include = cuePoint_cuePoint.list, cuePoint_cuePoint.add, liveStream.get, liveStream.createPeriodicSyncPoints, session.start, uiconf.get, baseEntry.get, metadata_metadata.list, permission.list
 
+[bpmn : public]
+generator = BpmnClientGenerator
+
