--- a/configurations/monit/monit.d/mariadb.template.rc
+++ b/configurations/monit/monit.d/mariadb.template.rc
@@ -10,7 +10,7 @@
             with path "/etc/my.cnf"
             # Reload mysql if the my.cnf file was changed
             if changed checksum
-               then exec "service mariadb reload"
+               then exec "/sbin/service mariadb reload"
 
         check file mysqld
             with path "/usr/bin/mysqld_safe"
