--- a/configurations/local.template.ini
+++ b/configurations/local.template.ini
@@ -124,7 +124,7 @@ metadata_sphinx_num_of_int_fields = 10
 ;range of ip addresses belonging to internal kaltura servers
 ;the range is used when checking service actions permissions and allowing to access certain 
 ;services without KS from the internal servers
-;internal_ip_range = @IP_RANGE@
+internal_ip_range = @IP_RANGE@
 
 ; dwh settings
 plays_limit = 100000
