Add mediaServerAsyncProcess php client generator

--- a/configurations/generator.ini
+++ b/configurations/generator.ini
@@ -64,6 +64,10 @@ excludeSourcePaths = src/com/kaltura/client/test,src/Kaltura.java
 internal = true
 nopackage = true
 
+[asyncMediaServerProcessClient : public]
+generator = Php5ClientGenerator
+include = livestream.get, livestream.appendrecording, uploadtoken.add, uploadtoken.upload
+
 [xml : public]
 generator = XmlClientGenerator
 internal = true
