Added java POJO client

--- a/configurations/generator.ini
+++ b/configurations/generator.ini
@@ -99,6 +99,10 @@ generator = RubyClientGenerator
 [java : public]
 generator = JavaClientGenerator
 
+[pojo : java]
+generator = PojoClientGenerator
+usePrivateAttributes = true
+
 [android : public]
 generator = AndroidClientGenerator
 linkhref = https://github.com/kaltura/AndroidReferenceApp
