- commented out DB section since outside users might [most probably] not have direct access to it. - replaced hardcoded partner ID with placeholder.

--- a/generator/sources/cli/config/config.template.ini
+++ b/generator/sources/cli/config/config.template.ini
@@ -1,16 +1,16 @@
 
 [general]
 ipSalt = @SALT@
-;apiHost = @API_HOST@
+apiHost = @API_HOST@
 logDir = @LOG_DIR@
 
 [presetRepository]
 class = KalturaPresetSecretRepository
-54321 = @YOUR_ADMIN_SECRET@
+@PARTNER_ID@ = @YOUR_ADMIN_SECRET@
 
-[databaseRepository]
-class = KalturaDatabaseSecretRepository
-host = @DB_HOST@
-user = @DB_USER@
-password = @DB_PASSWORD@
-database = @DATABASE@
+;[databaseRepository]
+;class = KalturaDatabaseSecretRepository
+;host = @DB_HOST@
+;user = @DB_USER@
+;password = @DB_PASSWORD@
+;database = @DATABASE@
