add delete job when deleting a group

--- a/configurations/generator.ini
+++ b/configurations/generator.ini
@@ -29,7 +29,7 @@ nopackage = true
 
 [batchClient  :  all]
 generator = Php5ClientGenerator
-include = session.start, session.get, batch.*, batchcontrol.*, jobs.*, media.add, media.addContent, media.get, media.cancelReplace, upload.upload, emailingestionprofile.*, system.ping, baseEntry.*, flavorAsset.*, thumbAsset.*, flavorParams.list, conversionProfile.listAssetParams, conversionProfile.get, conversionProfile.getDefault, bulkUpload.add, schema.serve, storageProfile.get, flavorParamsOutput.get, thumbParamsOutput.get, category.*, categoryEntry.*, categoryUser.*, user.add, user.get, user.list, user.delete, user.update, mediaInfo.list, partner.get, liveStream.validateRegisteredMediaServers, liveStream.list, filesync_filesync.list, liveReports.*
+include = session.start, session.get, batch.*, batchcontrol.*, jobs.*, media.add, media.addContent, media.get, media.cancelReplace, upload.upload, emailingestionprofile.*, system.ping, baseEntry.*, flavorAsset.*, thumbAsset.*, flavorParams.list, conversionProfile.listAssetParams, conversionProfile.get, conversionProfile.getDefault, bulkUpload.add, schema.serve, storageProfile.get, flavorParamsOutput.get, thumbParamsOutput.get, category.*, categoryEntry.*, categoryUser.*, user.add, user.get, user.list, user.delete, user.update, mediaInfo.list, partner.get, liveStream.validateRegisteredMediaServers, liveStream.list, filesync_filesync.list, liveReports.*, groupUser.*
 ignore = KalturaUploadedFileResource
 additional = KalturaBatchJobAppErrors, KalturaBulkUploadType, KalturaConversionEngineType, KalturaExportProtocol, KalturaSchemaType, KalturaIndexObjectType, KalturaDeleteObjectType, KalturaCopyObjectType
 generateDocs = true
