marked some client libs as internal

--- a/configurations/generator.ini
+++ b/configurations/generator.ini
@@ -55,6 +55,8 @@ clearPath = admin_console/lib/Kaltura/Client
 generator = Xml2As3ClientGenerator
 params.type = flex_client
 ignore = KalturaUploadedFileResource, KalturaCopyJobData
+internal = true
+nopackage = true
 generateDocs = true
 
 [mediaServerClient : java]
@@ -86,6 +88,8 @@ ignore = KalturaUploadedFileResource, KalturaCopyJobData
 generateDocs = true
 package = Kaltura
 subpackage = Client
+internal = true
+nopackage = true
 
 [php4 : public]
 generator = Php4ClientGenerator
@@ -154,4 +158,5 @@ exclude = media.addfrombulk
 
 [nodePlayServer : node]
 include = cuePoint_cuePoint.list, cuePoint_cuePoint.add, liveStream.get, liveStream.createPeriodicSyncPoints, session.start, uiconf.get, baseEntry.get, metadata_metadata.list, permission.list
-
+internal = true
+nopackage = true
