--- a/configurations/plugins.template.ini
+++ b/configurations/plugins.template.ini
@@ -88,6 +88,7 @@ CuePointEventNotifications
 MetadataEventNotifications
 ContentDistributionEventNotifications
 CaptionAssetEventNotifications
+DropFolderEventNotifications
 Kontiki
 Velocix
 Wowza
