--- a/deployment/permissions/object.KalturaBusinessProcessNotificationTemplate.ini
+++ b/deployment/permissions/object.KalturaBusinessProcessNotificationTemplate.ini
@@ -23,3 +23,9 @@ permissionItem4.action = update
 permissionItem4.partnerId = -2
 permissionItem4.permissions = eventNotification.SYSTEM_ADMIN_EVENT_NOTIFICATION_MODIFY, PARTNER_-2_GROUP_*_PERMISSION
 
+permissionItem5.object = KalturaBusinessProcessStartNotificationTemplate
+permissionItem5.parameter = abortOnDeletion
+permissionItem5.action = update
+permissionItem5.partnerId = -2
+permissionItem5.permissions = eventNotification.SYSTEM_ADMIN_EVENT_NOTIFICATION_MODIFY, PARTNER_-2_GROUP_*_PERMISSION
+
