Rectify duplicate permissionItem67
Resolving Admin Console reconvert permission missing.

--- a/deployment/permissions/service.jobs.ini
+++ b/deployment/permissions/service.jobs.ini
@@ -152,11 +152,6 @@ permissionItem17.param5 =
 permissionItem17.tags = 
 permissionItem17.permissions = SYSTEM_ADMIN_BATCH_CONTROL, PARTNER_-2_GROUP_*_PERMISSION
 
-permissionItem17.service = jobs
-permissionItem17.action = boostEntryJobs
-permissionItem17.partnerId = -2
-permissionItem17.permissions = SYSTEM_ADMIN_BATCH_CONTROL, PARTNER_-2_GROUP_*_PERMISSION
-
 permissionItem18.service = jobs
 permissionItem18.action = addmailjob
 permissionItem18.partnerId = -2
@@ -598,3 +593,11 @@ permissionItem66.param5 =
 permissionItem66.tags = 
 permissionItem66.permissions = BATCH_BASE, PARTNER_-1_GROUP_*_PERMISSION
 
+permissionItem67.service = jobs
+permissionItem67.action = boostEntryJobs
+permissionItem67.partnerId = -2
+permissionItem67.param3 = 
+permissionItem67.param4 = 
+permissionItem67.param5 = 
+permissionItem67.tags = 
+permissionItem67.permissions = SYSTEM_ADMIN_BATCH_CONTROL, PARTNER_-2_GROUP_*_PERMISSION
