redoing pull on 10.5.0.

--- a/generator/sources/php53/tests/config.ini
+++ b/generator/sources/php53/tests/config.ini
@@ -1,4 +1,4 @@
-serviceUrl = http://www.kaltura.com/
-partnerId = 54321
+serviceUrl = @SERVICE_URL@
+partnerId = @YOUR_PARTNER_ID@
 adminSecret = YOUR_ADMIN_SECRET
 userId = testUser
