--- a/generator/sources/zend/tests/config.ini
+++ b/generator/sources/zend/tests/config.ini
@@ -1,4 +1,4 @@
-serviceUrl = @SERVICE_URL@
-partnerId = @YOUR_PARTNER_ID@
-adminSecret = @YOUR_ADMIN_SECRET@
+serviceUrl = http://www.kaltura.com/
+partnerId = 54321
+adminSecret = YOUR_ADMIN_SECRET
 userId = testUser
