added BPM plugins [commented].

--- a/configurations/plugins.template.ini
+++ b/configurations/plugins.template.ini
@@ -95,3 +95,10 @@ Wowza
 IsmIndex
 ;SmoothProtect
 ;TvinciDistribution
+;Integration
+;ExampleIntegration
+;IntegrationEventNotifications
+;BpmEventNotificationIntegration
+;BusinessProcessNotification
+;ActivitiBusinessProcessNotification
+
