PARTNER_-2_GROUP_*_PERMISSION belongs to admin-console partner

--- a/deployment/permissions/service.responseprofile.ini
+++ b/deployment/permissions/service.responseprofile.ini
@@ -2,12 +2,12 @@
 permissionItem1.service = responseProfile
 permissionItem1.action = add
 permissionItem1.partnerId = 0
-permissionItem1.permissions = RESPONSE_PROFILE_ADD, PARTNER_-2_GROUP_*_PERMISSION
+permissionItem1.permissions = RESPONSE_PROFILE_ADD, -2>PARTNER_-2_GROUP_*_PERMISSION
 
 permissionItem2.service = responseProfile
 permissionItem2.action = delete
 permissionItem2.partnerId = 0
-permissionItem2.permissions = RESPONSE_PROFILE_DELETE, PARTNER_-2_GROUP_*_PERMISSION
+permissionItem2.permissions = RESPONSE_PROFILE_DELETE, -2>PARTNER_-2_GROUP_*_PERMISSION
 
 permissionItem3.service = responseProfile
 permissionItem3.action = get
@@ -17,18 +17,10 @@ permissionItem3.permissions = BASE_USER_SESSION_PERMISSION
 permissionItem4.service = responseProfile
 permissionItem4.action = list
 permissionItem4.partnerId = 0
-permissionItem4.param3 = 
-permissionItem4.param4 = 
-permissionItem4.param5 = 
-permissionItem4.tags = 
 permissionItem4.permissions = BASE_USER_SESSION_PERMISSION, KMC_READ_ONLY
 
 permissionItem5.service = responseProfile
 permissionItem5.action = update
 permissionItem5.partnerId = 0
-permissionItem5.param3 = 
-permissionItem5.param4 = 
-permissionItem5.param5 = 
-permissionItem5.tags = 
-permissionItem5.permissions = RESPONSE_PROFILE_UPDATE, PARTNER_-2_GROUP_*_PERMISSION
+permissionItem5.permissions = RESPONSE_PROFILE_UPDATE, -2>PARTNER_-2_GROUP_*_PERMISSION
 
