--- a/deployment/permissions/partner.0.ini
+++ b/deployment/permissions/partner.0.ini
@@ -1264,3 +1264,22 @@ permission195.type = 1
 permission195.name = PLAYBACK_BASE_PERMISSION
 permission195.friendlyName = "Playback base"
 permission195.description = "Playback base permissions"
+
+permission196.partnerId = 0
+permission196.type = 1
+permission196.name = RESPONSE_PROFILE_ADD
+permission196.friendlyName = "Add response-profile"
+permission196.description = "Add response-profile"
+
+permission197.partnerId = 0
+permission197.type = 1
+permission197.name = RESPONSE_PROFILE_DELETE
+permission197.friendlyName = "Delete response-profile"
+permission197.description = "Delete response-profile"
+
+permission198.partnerId = 0
+permission198.type = 1
+permission198.name = RESPONSE_PROFILE_UPDATE
+permission198.friendlyName = "Update response-profile"
+permission198.description = "Update response-profile"
+
