--- a/deployment/permissions/service.responseprofile.ini
+++ b/deployment/permissions/service.responseprofile.ini
@@ -12,12 +12,12 @@ permissionItem2.permissions = RESPONSE_PROFILE_DELETE, -2>PARTNER_-2_GROUP_*_PER
 permissionItem3.service = responseProfile
 permissionItem3.action = get
 permissionItem3.partnerId = 0
-permissionItem3.permissions = BASE_USER_SESSION_PERMISSION
+permissionItem3.permissions = BASE_USER_SESSION_PERMISSION, -2>PARTNER_-2_GROUP_*_PERMISSION
 
 permissionItem4.service = responseProfile
 permissionItem4.action = list
 permissionItem4.partnerId = 0
-permissionItem4.permissions = BASE_USER_SESSION_PERMISSION, KMC_READ_ONLY
+permissionItem4.permissions = BASE_USER_SESSION_PERMISSION, KMC_READ_ONLY, -2>PARTNER_-2_GROUP_*_PERMISSION
 
 permissionItem5.service = responseProfile
 permissionItem5.action = update
