Auto-generate all client and request config getters and setters

--- a/tests/monitoring/config.template.ini
+++ b/tests/monitoring/config.template.ini
@@ -1,8 +1,10 @@
 
-[client-config]
-clientTag = monitor
+[config]
 protocol = @ENVIRONMENT_PROTOCOL@
 port = @KALTURA_VIRTUAL_HOST_PORT@
+
+[client-config]
+clientTag = monitor
 
 [monitor-partner]
 id = -4
